--- a/CrvService/Properties/launchSettings.json
+++ b/CrvService/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50872",
-      "sslPort": 44383
+      "applicationUrl": "http://localhost:50828",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -17,13 +17,22 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CrvService": {
+    "Crv-Development": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "health",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Crv-LOCAL": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "health",
+      "applicationUrl": "http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
     }
   }
