--- a/CrvService/appsettings.Development.json
+++ b/CrvService/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CrvServiceContextOptions": {
+    "ConnectionString": "server=127.0.0.1;database=CrvService-local;user=root;password=123qwe;SslMode=none;AllowPublicKeyRetrieval=True;"
   }
 }
