--- a/CrvService.ServerSide/CrvService.ServerSide.csproj
+++ b/CrvService.ServerSide/CrvService.ServerSide.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CrvService.Common\CrvService.Common.csproj" />
+    <ProjectReference Include="..\CrvService.Configuration\CrvService.Configuration.csproj" />
     <ProjectReference Include="..\CrvService.Contracts\CrvService.Shared.csproj" />
     <ProjectReference Include="..\CrvService.Data\CrvService.Data.csproj" />
     <ProjectReference Include="..\CrvService.Logging\CrvService.Logging.csproj" />
