--- a/CrvService/CrvService.csproj
+++ b/CrvService/CrvService.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CrvService.Common\CrvService.Common.csproj" />
     <ProjectReference Include="..\CrvService.Configuration\CrvService.Configuration.csproj" />
     <ProjectReference Include="..\CrvService.Contracts\CrvService.Shared.csproj" />
     <ProjectReference Include="..\CrvService.Data\CrvService.Data.csproj" />
